# tausestack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ESTADO_ACTUAL_PROYECTO.md  FASE_2_COMPLETADA_RESUMEN.md  FASE_3_COMPLETADA_RESUMEN.md  FASE_4_COMPLETADA_RESUMEN.md  FASE_5_TEMPLATE_ENGINE_COMPLETADA.md  FASE_6_AI_INTEGRATION_COMPLETADA.md  PLAN_IMPLEMENTACION_INMEDIATA.md  PLAN_V0.9.0_AI_INTEGRATION.md  PROGRESO_TAUSESTACK.md  PROGRESO_Y_TODO_TAUSESTACK.md  README.md  ROADMAP.md  ROADMAP_VERSIONADO.md  check_import.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py  tause  test_db_sqlalchemy_backend.db
.cursor/rules/: reglasausestack.mdc
.github/workflows/: ci.yml
cli/: main.py
cli/commands/: __init__.py
cli/templates/fastapi-supabase/: Dockerfile  README.md  docker-compose.yml  requirements.txt
cli_test_area/my_new_app_module_test_env/: README.md  pyproject.toml
cli_test_area/my_new_app_module_test_env/app/: main.py
config/: README.md
core/: secrets.py
core/modules/auth/: __init__.py
core/modules/users/: __init__.py
docker/: README.md
docs/: guia_inicio_rapido.md  manual_tecnico.md
examples/: README.md  billing_service_demo.py  integrated_services_demo.py  multitenant_services_demo.py
examples/auth/: jwt_example.py  supabase_example.py
examples/database/: migracion_ejemplo.sql  modelo_migracion.py  supabase_crud_example.py
examples/integrations/: fastapi_supabase_app.py
examples/mcp/: custom_client.py
payments_and_billing/: __init__.py
payments_and_billing/gateways/: __init__.py
payments_and_billing/gateways/wompi/: __init__.py  client.py
scripts/: README.md  start_services.py
services/: api_gateway.py  mcp_server_api.py  simple_gateway.py
services/agent_orchestration/: README.md
services/agent_orchestration/api/: v1.py
services/agent_orchestration/core/: alembic.ini  db.py  db_models.py  execution_history.py  workflow_store.py
services/agent_orchestration/tests/: test_api.py  test_conditional_parallel.py  test_integration.py  test_multiagent.py
services/analytics/: README.md
services/analytics/api/: __init__.py  main.py
services/auth/adapters/: README.md  jwt_provider.py  supabase_provider.py
services/auth/interfaces/: README.md  auth_provider.py  permissions.py
services/billing/api/: __init__.py  main.py
services/communications/api/: __init__.py  main.py
services/database/interfaces/: README.md  db_adapter.py
services/database/migrations/: README.md  cli.py  generator.py
services/integrations/fastapi/: README.md  supabase_fastapi.py
services/mcp_client/: README.md  __init__.py
services/mcp_client/api/: main.py  v1.py
services/mcp_client/core/: base_client.py  registry.py
services/mcp_client/interfaces/: README.md  exceptions.py  mcp_client.py  mcp_server.py
services/mcp_client/tests/: test_api.py  test_health.py
services/payments/: README.md
services/payments/interfaces/: README.md  payment_gateway.py
services/payments/models/: gateway_config.py  transaction.py
services/secrets/: README.md  __init__.py  aws_provider.py  provider.py  supabase_provider.py  vault_provider.py
services/storage/: README.md  __init__.py  gcs_provider.py  provider.py  s3_provider.py  serializers.py  supabase_provider.py
services/testing/: README.md
services/testing/helpers/: auth_test_helpers.py  database_test_helpers.py  supabase_test_helpers.py
services/users/: README.md
services/users/api/: auth.py  main.py  v1.py  v1_roles.py
services/users/core/: alembic.ini  auth.py  db_models.py  db_session.py
services/users/tests/: test_auth.py  test_users.py
shared/: README.md  models.py
tausestack/: __init__.py
tausestack/cli/: main.py
tausestack/framework/: config.py  main.py  routing.py
tausestack/framework/middleware/: tenant_resolver.py
tausestack/sdk/: README.md  __init__.py
tausestack/sdk/auth/: base.py  (+1 more)
tests/: test_app.py  test_secrets_provider.py  test_serializers.py  test_storage_chunking.py  test_supabase_database_adapter.py  test_supabase_provider.py  test_supabase_storage_provider.py
ui/: README.md  package-lock.json  package.json
ui/components/: AgentCard.tsx  README.md  UserTable.tsx
ui/hooks/: README.md  useAgentStatus.ts
ui/pages/: Dashboard.client.tsx  OrchestrationDemo.tsx
ui/utils/: README.md  formatMetrics.ts
(+59 files in other folders)
