[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[project.urls]
"Homepage" = "https://www.tause.co"
"Bug Tracker" = "https://github.com/felipetause/tausestack/issues"
"Documentation" = "https://docs.tause.co"

[project.scripts]
tause = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
name = "tausestack"
version = "0.3.0"
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["core/modules"]
