[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_new_app_module_test_env"
version = "0.1.0"
description = "Un nuevo proyecto TauseStack"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.22.0",
    "tausestack @ git+https://github.com/tause-ai/tausestack.git#egg=tausestack" # O la versión publicada
]

[tool.hatch.build.targets.wheel]
packages = ["app"]